# soft-body-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: sbsConfig.cmake.in
data/meshes/: 2tets.ply  3tets.ply  bar_tet.ply  bunny.ply  bunny_simplified.ply  cloth.ply  cube.ply  cube_bin.ply  cube_tet.ply  line.ply  square.ply  tet_bar_5x2x2.ply  tetrahedron.ply  triangle.ply  xz_plane.ply
data/scenes/: scene1.json
examples/: CMakeLists.txt  bezier_curve_swept_surface.cpp  fem_beam.cpp  fem_beam_autodiff.cpp  fem_sph_beam.cpp  fem_sph_efg_beam.cpp  mls_efg_meshless_beam.cpp  mls_shape_function_approximation_error.cpp  sandbox.cpp  sph_beam.cpp  sph_efg_beam.cpp  stvk_fem_beam.cpp  stvk_fem_sph_beam.cpp  stvk_hybrid_mesh_meshless_beam.cpp  stvk_meshless_beam.cpp  stvk_mls_efg_meshless_beam.cpp  stvk_sph_beam.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/common/: geometry.cpp  geometry.h  mesh.h  node.h  primitive.h  scene.h  tokenize.h
include/geometry/: get_simple_bar_model.h  get_simple_cloth_model.h
include/io/: geometry.h  load_scene.h  ply.h
include/physics/: mesh.h  node.h  scene.h  topological_mesh.h
include/physics/collision/: brute_force_collision_detector.h  collision_detector.h  intersections.h
include/physics/cutting/: cut_tetrahedron.h  virtual_scalpel.h
include/physics/xpbd/: collision_constraint.h  constraint.h  distance_constraint.h  green_constraint.h  mesh.h  simulation_parameters.h  solver.h
include/rendering/: camera.h  physics_timestep_throttler.h  pick.h  renderer.h  shader.h  trackball_rotation_adapter.h
include/sbs/: aliases.h
include/sbs/common/: geometry.h  mesh.h  node.h  primitive.h
include/sbs/geometry/: curves.h  get_simple_bar_model.h  get_simple_cloth_model.h  get_simple_plane_model.h  grid.h  intersections.h  line.cpp  line.h  tetrahedral_domain.h  transform.h
include/sbs/io/: endianness.hpp  load_scene.h  ply.h  tokenize.h
include/sbs/math/: basis_functions.h  cell.h  common.h  elasticity.h  element.h  fem.h  fem_model.h  fem_sph.h  interpolation.h  kernels.h  mapping.h  meshless_model.h  mls.h  quadrature.h  sph.h
include/sbs/physics/: body.h  constraint.h  environment_body.h  gauss_seidel_solver.h  mesh.h  particle.h  simulation.h  solver.h  tetrahedral_body.h  tetrahedral_mesh_boundary.h  timestep.h  topological_mesh.h  topology.h
include/sbs/physics/body/: body.h  environment_body.h  fem_mixed_body.h  linear_tetrahedral_fem_body.h  meshless_body.h  sph_body.h
include/sbs/physics/collision/: brute_force_cd_system.h  brute_force_collision_detector.h  bvh.h  bvh_model.h  cd_system.h  collision_detector.h  collision_model.h  contact.h  sdf_model.h
include/sbs/physics/cutting/: cut_tetrahedron.h  virtual_scalpel.h
include/sbs/physics/functions/: kernel.h
include/sbs/physics/mechanics/: efg_tetrahedral_meshless_model.h  fem_sph_efg_model.h  fem_sph_model.h  hybrid_mesh_meshless_mls_body.h  hybrid_mesh_meshless_mls_node.h  hybrid_mesh_meshless_mls_surface.h  hybrid_mesh_meshless_sph_body.h  hybrid_mesh_meshless_sph_node.h  hybrid_mesh_meshless_sph_surface.h  linear_tetrahedral_fem_model.h  meshless_body.h  meshless_node.h  meshless_sph_body.h  meshless_sph_node.h  meshless_sph_surface.h  sph_efg_model.h  sph_meshless_model.h
include/sbs/physics/visual/: fem_mixed_embedded_surface.h  interpolated_embedded_surface.h  meshless_embedded_surface.h  tetrahedral_fem_embedded_surface.h
include/sbs/physics/xpbd/: collision_constraint.h  constraint.h  contact_handler.h  fem.h  mesh.h  (+23 more)
include/sbs/rendering/: camera.h  light.h  physics_timestep_throttler.h  pick.h  renderer.h  shader.h  trackball_rotation_adapter.h
include/sbs/topology/: tetrahedron_set.h
shaders/: phong.fs  point.vs  wireframe.fs  wireframe.vs
src/common/: geometry.cpp  mesh.cpp  node.cpp  primitive.cpp
src/geometry/: get_simple_bar_model.cpp  get_simple_cloth_model.cpp  get_simple_plane_model.cpp  grid.cpp  intersections.cpp  line.cpp  tetrahedral_domain.cpp  transform.cpp
src/io/: load_scene.cpp  ply.cpp
src/math/: basis_functions.cpp  mls.cpp
src/physics/: body.cpp  constraint.cpp  environment_body.cpp  gauss_seidel_solver.cpp  mesh.cpp  node.cpp  particle.cpp  simulation.cpp  solver.cpp  tetrahedral_body.cpp  tetrahedral_mesh_boundary.cpp  timestep.cpp  topological_mesh.cpp  topology.cpp
src/physics/body/: body.cpp  environment_body.cpp  linear_tetrahedral_fem_body.cpp
src/physics/collision/: brute_force_cd_system.cpp  brute_force_collision_detector.cpp  bvh_model.cpp  cd_system.cpp  collision_detector.cpp  collision_model.cpp  contact.cpp  intersections.cpp  sdf_model.cpp
src/physics/cutting/: cut_tetrahedron.cpp  virtual_scalpel.cpp
src/physics/functions/: kernel.cpp
src/physics/mechanics/: hybrid_mesh_meshless_mls_body.cpp  hybrid_mesh_meshless_mls_node.cpp  hybrid_mesh_meshless_mls_surface.cpp  hybrid_mesh_meshless_sph_body.cpp  hybrid_mesh_meshless_sph_node.cpp  hybrid_mesh_meshless_sph_surface.cpp  linear_tetrahedral_fem_model.cpp  meshless_body.cpp  meshless_node.cpp  meshless_sph_body.cpp  meshless_sph_node.cpp  meshless_sph_surface.cpp
src/physics/visual/: tetrahedral_fem_embedded_surface.cpp
src/physics/xpbd/: collision_constraint.cpp  constraint.cpp  contact_handler.cpp  distance_constraint.cpp  gauss_seidel_solver.cpp  green_constraint.cpp  hybrid_mesh_meshless_mls_collision_constraint.cpp  hybrid_mesh_meshless_mls_stvk_constraint.cpp  hybrid_mesh_meshless_mls_surface_contact_handler.cpp  hybrid_mesh_meshless_sph_collision_constraint.cpp  hybrid_mesh_meshless_sph_stvk_constraint.cpp  hybrid_mesh_meshless_sph_surface_contact_handler.cpp  mesh.cpp  meshless_sph_collision_constraint.cpp  meshless_sph_positional_constraint.cpp  meshless_sph_stvk_constraint.cpp  meshless_sph_surface_contact_handler.cpp  meshless_stvk_constraint.cpp  particle.cpp  simulation.cpp  simulation_parameters.cpp  solver.cpp  timestep.cpp
src/rendering/: camera.cpp  light.cpp  physics_timestep_throttler.cpp  pick.cpp  renderer.cpp  shader.cpp  trackball_rotation_adapter.cpp
src/topology/: tetrahedron_set.cpp
